--- a/a.html
+++ b/a.html
@@ -21,6 +21,8 @@
     </nav>
     <div class="bg-amber-200 w-full h-full">
         <h1 class="text-center font-bold text-2xl">Welcome To Our Page</h1>
+
+        new data 
     </div>
 </header>
 
