--- a/a.html
+++ b/a.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,35 +8,349 @@
     <title>Document</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-sky-200">
-    <header>
-    <nav class="bg-gray-800 h-10 text-red-500">
-        <div class="justify-items-end">
-            <ul class="flex">
-                <li class="m-1">Home</li>
-                <li class="m-1">About Us</li>
-                <li class="m-1">Contact</li>
-                <li class="m-1">LogIn</li>
-            </ul>
-    </div>
-    </nav>
-    <div class="bg-amber-200 w-full h-full">
-        <h1 class="text-center font-bold text-2xl">Welcome To Our Page</h1>
-    </div>
-</header>
 
-<main >
-    <div class="m-1 flex">
-        <div class="w-3/5">
-            <img src="img1.jpg" alt="" srcset="" >
+<body class="bg-slate-200">
+    <header>
+        <!----------------------------------------- navbar------------------------------------------- -->
+        <nav class="bg-red-700 h-10 space-x-9 text-white-500 ">
+            <div class="justify-items-end  ml-4">
+                <ul class="flex space-x-9 text-zinc-50 ">
+                    <li class="m-1">Home</li>
+                    <li class="m-1">About Us</li>
+                    <li class="m-1">Contact</li>
+                    <li class="m-1">LogIn</li>
+                </ul>
+            </div>
+        </nav>
+
+        <!-- ----------------------------------------options for users to select -------------------- -->
+        <div class="flex bg-red-700 grid-cols-1 grid-cols-2 w-full h-full p-4 space-x-4 ">
+            <div class=" bg-blue-100 rounded-full p-2">
+                <label for="gender">Gender</label>
+
+                <select name="Girl" id="gender" class="mr-8 border-radius: 10px; rounded-full">
+
+                    <option value="Girl" selected>Girl</option>
+                    <option value="Boy">Boy</option>
+
+                </select>
+            </div>
+            <div class=" bg-blue-100 rounded-full p-2">
+                <label for="gender">Room Type</label>
+
+                <select name="Girl" id="gender" class="mr-8 border-radius: 10px; rounded-full">
+
+                    <option value="Girl" selected>1Bhk</option>
+                    <option value="Girl" selected>2Bhk</option>
+                    <option value="Girl" selected>3Bhk</option>
+                    <option value="Girl" selected>4Bhk</option>
+
+
+                </select>
+            </div>
+
+
+
+            <div class=" bg-blue-100 rounded-full p-2">
+                <label for="gender">Occupancy</label>
+
+                <select name="Girl" id="gender" class="mr-8 border-radius: 10px; rounded-full">
+
+                    <option value="Girl" selected>Professional</option>
+                    <option value="Boy">Students</option>
+
+                </select>
+
+            </div>
+
+            <div class=" bg-blue-100 rounded-full p-2">
+                <label for="gender">Budget</label>
+
+                <select name="Girl" id="gender" class="mr-8 border-radius: 10px; rounded-full">
+
+                    <option value="Girl" selected>3k-4k</option>
+                    <option value="Boy">4k-5k</option>
+                    <option value="Boy">5k-6k</option>
+                    <option value="Boy">6k-7k</option>
+                    <option value="Boy">7k-8k</option>
+                    <option value="Boy">8k-9k</option>
+                    <option value="Boy">above 10k</option>
+
+
+                </select>
+
+            </div>
+
+            <div class=" bg-blue-100 rounded-full p-2">
+                <label for="gender">NearBy</label>
+
+                <select name="Girl" id="gender" class="mr-8 border-radius: 10px; rounded-full">
+
+                    <option value="Girl" selected>Baner</option>
+                    <option value="Boy">Aundh</option>
+                    <option value="Girl" selected>Balewadi</option>
+
+                </select>
+            </div>
+
+            <div class=" bg-blue-100 rounded-full p-2">
+                <label for="gender">Verified PG</label>
+
+                <select name="Girl" id="gender" class="mr-8 border-radius: 10px; rounded-full">
+
+                    <option value="Girl" selected>No</option>
+                    <option value="Girl" selected>Yes</option>
+
+                </select>
+            </div>
+
+
+
         </div>
-        <div class="mt-10 text-lg ">
-            <h1 class="font-semibold m-1">1BHK</h1>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore harum nam facilis incidunt dignissimos exercitationem in. Obcaecati enim ea beatae vero fugit voluptatem. Non, natus reprehenderit odio illum quaerat inventore!Lorem
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat facilis molestiae, sequi 
         </div>
-    </div>
-</main>
-    
+
+
+
+    </header>
+
+    <main>
+
+        <!-------------------------------------- Searching flat------------------------------------- -->
+        <div class="mb-6 mt-40">
+            <h1 class="text-center text-2xl m-2 font-bold ">Find a home away from home</h1>
+        </div>
+
+        <div class=" bg-blue-100 rounded-full p-2 w-3/4 border-2 border-red-500 rounded-full mx-auto">
+            <div class="bg-red-700 w-40 text-center text-white rounded-full mx-8 p-2">
+                <button for="gender">Search<button>
+            </div>
+        </div>
+
+
+        <div class="w-full h-96 bg-slate-200">
+
+        </div>
+
+        <!------------------------------------- Flat/pg Details-------------------------------------- -->
+        <div class="m-1 flex border-red-500 border mb-6 shadow-black shadow-sm m-4">
+            <div class="w-3/5 m-2">
+                <img src="img1.jpg" alt="" srcset="">
+            </div>
+            <div class="mt-10 text-lg ">
+                <h1 class="font-semibold m-1">1BHK</h1>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore harum nam facilis incidunt dignissimos
+                exercitationem in. Obcaecati enim ea beatae vero fugit voluptatem. Non, natus reprehenderit odio illum
+                quaerat inventore!Lorem
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat facilis molestiae, sequi
+                <div class="flex m-2 mr-4 text-white-500">
+                    <div class=" text-center   bg-red-700 text-center w-40 rounded-full mx-8 mr-4 p-2">
+                        <button class="text-center text-white-500"></button> <i class="fa fa-phone"></i> Call
+                        Now</button>
+                    </div>
+
+                    <div class="bg-red-700 text-center w-40 rounded-full mx-8 p-2">
+                        <button for="gender">Add To Favorites<button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+
+
+        <div class="m-1 flex border-red-500 border mb-6 shadow-black shadow-sm m-4">
+            <div class="w-3/5 m-2">
+                <img src="img1.jpg" alt="" srcset="">
+            </div>
+            <div class="mt-10 text-lg ">
+                <h1 class="font-semibold m-1">1BHK</h1>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore harum nam facilis incidunt dignissimos
+                exercitationem in. Obcaecati enim ea beatae vero fugit voluptatem. Non, natus reprehenderit odio illum
+                quaerat inventore!Lorem
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat facilis molestiae, sequi
+                <div class="flex m-2 mr-4 text-white-500">
+                    <div class=" text-white-500  bg-red-700 text-center w-40 rounded-full mx-8 mr-4 p-2">
+                        <button class="text-center text-white-500"></button> <i class="fa fa-phone"></i> Call
+                        Now</button>
+                    </div>
+
+                    <div class="bg-red-700 w-40 rounded-full mx-8 p-2">
+                        <button for="gender">Add To Favorites<button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+
+
+        <div class="m-1 flex border-red-500 border mb-6 shadow-black shadow-sm m-4">
+            <div class="w-3/5 m-2">
+                <img src="img1.jpg" alt="" srcset="">
+            </div>
+            <div class="mt-10 text-lg ">
+                <h1 class="font-semibold m-1">1BHK</h1>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore harum nam facilis incidunt dignissimos
+                exercitationem in. Obcaecati enim ea beatae vero fugit voluptatem. Non, natus reprehenderit odio illum
+                quaerat inventore!Lorem
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat facilis molestiae, sequi
+                <div class="flex m-2 mr-4 text-white-500">
+                    <div class=" text-white-500  bg-red-700 text-center w-40 rounded-full mx-8 mr-4 p-2">
+                        <button class="text-center text-white-500"></button> <i class="fa fa-phone"></i> Call
+                        Now</button>
+                    </div>
+
+                    <div class="bg-red-700 w-40 rounded-full mx-8 p-2">
+                        <button for="gender">Add To Favorites<button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+
+
+        <div class="m-1 flex border-red-500 border mb-6 shadow-black shadow-sm m-4">
+            <div class="w-3/5 m-2">
+                <img src="img1.jpg" alt="" srcset="">
+            </div>
+            <div class="mt-10 text-lg ">
+                <h1 class="font-semibold m-1">1BHK</h1>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore harum nam facilis incidunt dignissimos
+                exercitationem in. Obcaecati enim ea beatae vero fugit voluptatem. Non, natus reprehenderit odio illum
+                quaerat inventore!Lorem
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat facilis molestiae, sequi
+                <div class="flex m-2 mr-4 text-white-500">
+                    <div class=" text-white-500  bg-red-700 text-center w-40 rounded-full mx-8 mr-4 p-2">
+                        <button class="text-center text-white-500"></button> <i class="fa fa-phone"></i> Call
+                        Now</button>
+                    </div>
+
+                    <div class="bg-red-700 w-40 rounded-full mx-8 p-2">
+                        <button for="gender">Add To Favorites<button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+
+
+
+        <div class="m-1 flex border-red-500 border mb-6 shadow-black shadow-sm m-4">
+            <div class="w-3/5 m-2">
+                <img src="img1.jpg" alt="" srcset="">
+            </div>
+            <div class="mt-10 text-lg ">
+                <h1 class="font-semibold m-1">1BHK</h1>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore harum nam facilis incidunt dignissimos
+                exercitationem in. Obcaecati enim ea beatae vero fugit voluptatem. Non, natus reprehenderit odio illum
+                quaerat inventore!Lorem
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat facilis molestiae, sequi
+                <div class="flex m-2 mr-4 text-white-500">
+                    <div class=" text-white-500  bg-red-700 text-center w-40 rounded-full mx-8 mr-4 p-2">
+                        <button class="text-center text-white-500"></button> <i class="fa fa-phone"></i> Call
+                        Now</button>
+                    </div>
+
+                    <div class="bg-red-700 w-40 rounded-full mx-8 p-2">
+                        <button for="gender">Add To Favorites<button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+
+
+
+        <div class="m-1 flex border-red-500 border mb-6  shadow-black shadow-sm m-4">
+            <div class="w-3/5 m-2">
+                <img src="img1.jpg" alt="" srcset="">
+            </div>
+            <div class="mt-10 text-lg  ">
+                <h1 class="font-semibold m-1 ">1BHK</h1>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore harum nam facilis incidunt dignissimos
+                exercitationem in. Obcaecati enim ea beatae vero fugit voluptatem. Non, natus reprehenderit odio illum
+                quaerat inventore!Lorem
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat facilis molestiae, sequi
+                <div class="flex m-2 mr-4 text-white-500">
+                    <div class=" text-white-500  bg-red-700 text-center w-40 rounded-full mx-8 mr-4 p-2">
+                        <button class="text-center text-white-500"></button> <i class="fa fa-phone"></i> Call
+                        Now</button>
+                    </div>
+
+                    <div class="bg-red-700 w-40 rounded-full mx-8 p-2">
+                        <button for="gender">Add To Favorites<button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+
+
+
+        <!-- ----------------------contact us form ------------------------------------------------ -->
+        <div class="w-full w-96 max-w-full mx-auto">
+            <div class="p-6 border border-gray-300 sm:rounded-md">
+                <form method="POST" action="#">
+                    <label class="block mb-6">
+                        <span class="text-gray-700">Your name</span>
+                        <input type="text" name="name" class="block w-full mt-1 border-gray-300 
+                        rounded-md shadow-sm focus:border-indigo-300 focus:ring focus:ring-indigo-200 
+                        focus:ring-opacity-50 " placeholder="Your Name" />
+                    </label>
+                    <label class="block mb-6">
+                        <span class="text-gray-700">Email address</span>
+                        <input name="email" type="email" class=" block w-full mt-1 border-gray-300 rounded-md shadow-sm
+                    focus:border-indigo-300 focus:ring focus:ring-indigo-200 focus:ring-opacity-50
+                  " placeholder="email@example.com" required />
+                    </label>
+                    <label class="block mb-6">
+                        <span class="text-gray-700">Message</span>
+                        <textarea name="message" class="block w-full mt-1 border-gray-300 rounded-md shadow-sm focus:border-indigo-300
+                    focus:ring focus:ring-indigo-200 focus:ring-opacity-50 " rows="3"
+                            placeholder="Tell us what you're thinking about..."></textarea>
+                    </label>
+                    <div class="mb-6">
+                        <button type="submit" class="h-10 px-5 text-indigo-100 bg-red-700 rounded-lg transition-colors duration-150
+                    focus:shadow-outline hover:bg-indigo-800">
+                            Contact Us
+                        </button>
+                    </div>
+                    <div>
+                        <div class="mt-2 text-gray-700 text-right text-xs">
+        
+                            <div class="hover:underline" target="_blank"></div>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+
+
+
+
+
+
+
+
+    </main>
+
+
+
+
+    <footer>
+
+    </footer>
+
 </body>
+
 </html>
