--- a/a.html
+++ b/a.html
@@ -13,7 +13,7 @@
     <header>
         <!----------------------------------------- navbar------------------------------------------- -->
         <nav class="bg-red-700 h-10 space-x-9 text-white-500 ">
-            <div class="justify-items-end  ml-4">
+            <div class="  ml-4">
                 <ul class="flex space-x-9 text-zinc-50 ">
                     <li class="m-1">Home</li>
                     <li class="m-1">About Us</li>
@@ -24,7 +24,7 @@
         </nav>
 
         <!-- ----------------------------------------options for users to select -------------------- -->
-        <div class="flex bg-red-700 grid-cols-1 grid-cols-2 w-full h-full p-4 space-x-4 ">
+        <div class="flex bg-red-700  w-full  p-4 space-x-4 ">
             <div class=" bg-blue-100 rounded-full p-2">
                 <label for="gender">Gender</label>
 
@@ -114,18 +114,18 @@
     <main>
 
         <!-------------------------------------- Searching flat------------------------------------- -->
-        <div class="mb-6 mt-40">
+        <div class="mb-6 mt-32 ">
             <h1 class="text-center text-2xl m-2 font-bold ">Find a home away from home</h1>
         </div>
 
-        <div class=" bg-blue-100 rounded-full p-2 w-3/4 border-2 border-red-500 rounded-full mx-auto">
-            <div class="bg-red-700 w-40 text-center text-white rounded-full mx-8 p-2">
+        <div class="  justify-items-end bg-blue-100 rounded-full p-2 w-3/4 border-2 border-red-500 rounded-full mx-auto">
+            <div class=" justify-items-end bg-red-700 w-40 text-center text-white rounded-full mx-8 p-2">
                 <button for="gender">Search<button>
             </div>
         </div>
 
 
-        <div class="w-full h-96 bg-slate-200">
+        <div class="w-full h-48  bg-slate-200">
 
         </div>
 
@@ -140,9 +140,9 @@
                 exercitationem in. Obcaecati enim ea beatae vero fugit voluptatem. Non, natus reprehenderit odio illum
                 quaerat inventore!Lorem
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat facilis molestiae, sequi
-                <div class="flex m-2 mr-4 text-white-500">
+                <div class="flex m-2 mr-4 text-white">
                     <div class=" text-center   bg-red-700 text-center w-40 rounded-full mx-8 mr-4 p-2">
-                        <button class="text-center text-white-500"></button> <i class="fa fa-phone"></i> Call
+                        <button class="text-center "></button>  Call
                         Now</button>
                     </div>
 
@@ -167,9 +167,9 @@
                 exercitationem in. Obcaecati enim ea beatae vero fugit voluptatem. Non, natus reprehenderit odio illum
                 quaerat inventore!Lorem
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat facilis molestiae, sequi
-                <div class="flex m-2 mr-4 text-white-500">
-                    <div class=" text-white-500  bg-red-700 text-center w-40 rounded-full mx-8 mr-4 p-2">
-                        <button class="text-center text-white-500"></button> <i class="fa fa-phone"></i> Call
+                <div class="flex m-2 mr-4 text-white">
+                    <div class="  bg-red-700 text-center w-40 rounded-full mx-8 mr-4 p-2">
+                        <button class="text-center"></button> Call
                         Now</button>
                     </div>
 
@@ -194,9 +194,9 @@
                 exercitationem in. Obcaecati enim ea beatae vero fugit voluptatem. Non, natus reprehenderit odio illum
                 quaerat inventore!Lorem
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat facilis molestiae, sequi
-                <div class="flex m-2 mr-4 text-white-500">
-                    <div class=" text-white-500  bg-red-700 text-center w-40 rounded-full mx-8 mr-4 p-2">
-                        <button class="text-center text-white-500"></button> <i class="fa fa-phone"></i> Call
+                <div class="flex m-2 mr-4 text-white">
+                    <div class="  bg-red-700 text-center w-40 rounded-full mx-8 mr-4 p-2">
+                        <button class="text-center"></button>Call
                         Now</button>
                     </div>
 
@@ -221,9 +221,9 @@
                 exercitationem in. Obcaecati enim ea beatae vero fugit voluptatem. Non, natus reprehenderit odio illum
                 quaerat inventore!Lorem
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat facilis molestiae, sequi
-                <div class="flex m-2 mr-4 text-white-500">
-                    <div class=" text-white-500  bg-red-700 text-center w-40 rounded-full mx-8 mr-4 p-2">
-                        <button class="text-center text-white-500"></button> <i class="fa fa-phone"></i> Call
+                <div class="flex m-2 mr-4 text-white">
+                    <div class=" bg-red-700 text-center w-40 rounded-full mx-8 mr-4 p-2">
+                        <button class="text-center "></button> Call
                         Now</button>
                     </div>
 
@@ -249,9 +249,9 @@
                 exercitationem in. Obcaecati enim ea beatae vero fugit voluptatem. Non, natus reprehenderit odio illum
                 quaerat inventore!Lorem
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat facilis molestiae, sequi
-                <div class="flex m-2 mr-4 text-white-500">
-                    <div class=" text-white-500  bg-red-700 text-center w-40 rounded-full mx-8 mr-4 p-2">
-                        <button class="text-center text-white-500"></button> <i class="fa fa-phone"></i> Call
+                <div class="flex m-2 mr-4 text-white">
+                    <div class="  bg-red-700 text-center w-40 rounded-full mx-8 mr-4 p-2">
+                        <button class="text-center "></button>  Call
                         Now</button>
                     </div>
 
@@ -277,9 +277,9 @@
                 exercitationem in. Obcaecati enim ea beatae vero fugit voluptatem. Non, natus reprehenderit odio illum
                 quaerat inventore!Lorem
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat facilis molestiae, sequi
-                <div class="flex m-2 mr-4 text-white-500">
-                    <div class=" text-white-500  bg-red-700 text-center w-40 rounded-full mx-8 mr-4 p-2">
-                        <button class="text-center text-white-500"></button> <i class="fa fa-phone"></i> Call
+                <div class="flex m-2 mr-4 text-white">
+                    <div class="  bg-red-700 text-center w-40 rounded-full mx-8 mr-4 p-2">
+                        <button class="text-center "></button> Call
                         Now</button>
                     </div>
 
@@ -296,24 +296,24 @@
 
 
         <!-- ----------------------contact us form ------------------------------------------------ -->
-        <div class="w-full w-96 max-w-full mx-auto">
-            <div class="p-6 border border-gray-300 sm:rounded-md">
+        <div class="w-full w-96 max-w-full mx-auto m-8">
+            <div class="p-6 border border-red-300 sm:rounded-md">
                 <form method="POST" action="#">
-                    <label class="block mb-6">
+                    <label class=" mb-6">
                         <span class="text-gray-700">Your name</span>
-                        <input type="text" name="name" class="block w-full mt-1 border-gray-300 
+                        <input type="text" name="name" class=" w-full mt-1 border-gray-300 
                         rounded-md shadow-sm focus:border-indigo-300 focus:ring focus:ring-indigo-200 
                         focus:ring-opacity-50 " placeholder="Your Name" />
                     </label>
-                    <label class="block mb-6">
+                    <label class="mb-6">
                         <span class="text-gray-700">Email address</span>
-                        <input name="email" type="email" class=" block w-full mt-1 border-gray-300 rounded-md shadow-sm
+                        <input name="email" type="email" class="  w-full mt-1 border-gray-300 rounded-md shadow-sm
                     focus:border-indigo-300 focus:ring focus:ring-indigo-200 focus:ring-opacity-50
                   " placeholder="email@example.com" required />
                     </label>
-                    <label class="block mb-6">
+                    <label class=" mb-6">
                         <span class="text-gray-700">Message</span>
-                        <textarea name="message" class="block w-full mt-1 border-gray-300 rounded-md shadow-sm focus:border-indigo-300
+                        <textarea name="message" class="w-full mt-1 border-gray-300 rounded-md shadow-sm focus:border-indigo-300
                     focus:ring focus:ring-indigo-200 focus:ring-opacity-50 " rows="3"
                             placeholder="Tell us what you're thinking about..."></textarea>
                     </label>
@@ -345,7 +345,8 @@
 
 
 
-    <footer>
+    <footer class=" bg-red-700  text-white text-center p-4">
+        <h3 class="text-center mb-6">GrihaPravesh.olaorg.com</h3>
 
     </footer>
 
