--- a/a.html
+++ b/a.html
@@ -118,8 +118,8 @@
             <h1 class="text-center text-2xl m-2 font-bold ">Find a home away from home</h1>
         </div>
 
-        <div class="  justify-items-end bg-blue-100 rounded-full p-2 w-3/4 border-2 border-red-500 rounded-full mx-auto">
-            <div class=" justify-items-end bg-red-700 w-40 text-center text-white rounded-full mx-8 p-2">
+        <div class="  flex bg-blue-100 rounded-full p-2 w-3/4 border-2 border-red-500 rounded-full mx-auto">
+            <div class="justify-end bg-red-700 w-40 text-center text-white rounded-full mx-8 p-2">
                 <button for="gender">Search<button>
             </div>
         </div>
@@ -159,7 +159,7 @@
 
         <div class="m-1 flex border-red-500 border mb-6 shadow-black shadow-sm m-4">
             <div class="w-3/5 m-2">
-                <img src="img1.jpg" alt="" srcset="">
+                <img src="img2.jpg" alt="" srcset="">
             </div>
             <div class="mt-10 text-lg ">
                 <h1 class="font-semibold m-1">1BHK</h1>
@@ -186,7 +186,7 @@
 
         <div class="m-1 flex border-red-500 border mb-6 shadow-black shadow-sm m-4">
             <div class="w-3/5 m-2">
-                <img src="img1.jpg" alt="" srcset="">
+                <img src="img3.jpg" alt="" srcset="">
             </div>
             <div class="mt-10 text-lg ">
                 <h1 class="font-semibold m-1">1BHK</h1>
@@ -213,7 +213,7 @@
 
         <div class="m-1 flex border-red-500 border mb-6 shadow-black shadow-sm m-4">
             <div class="w-3/5 m-2">
-                <img src="img1.jpg" alt="" srcset="">
+                <img src="img4.jpg" alt="" srcset="">
             </div>
             <div class="mt-10 text-lg ">
                 <h1 class="font-semibold m-1">1BHK</h1>
@@ -241,7 +241,7 @@
 
         <div class="m-1 flex border-red-500 border mb-6 shadow-black shadow-sm m-4">
             <div class="w-3/5 m-2">
-                <img src="img1.jpg" alt="" srcset="">
+                <img src="img5.jpg" alt="" srcset="">
             </div>
             <div class="mt-10 text-lg ">
                 <h1 class="font-semibold m-1">1BHK</h1>
@@ -346,7 +346,7 @@
 
 
     <footer class=" bg-red-700  text-white text-center p-4">
-        <h3 class="text-center mb-6">GrihaPravesh.olaorg.com</h3>
+        <h3 class="text-center">GrihaPravesh.olaorg.com</h3>
 
     </footer>
 
