--- a/a.html
+++ b/a.html
@@ -12,9 +12,9 @@
 <body class="bg-slate-200">
     <header>
         <!----------------------------------------- navbar------------------------------------------- -->
-        <nav class="bg-red-700 h-10 space-x-9 text-white-500 ">
-            <div class="  ml-4">
-                <ul class="flex space-x-9 text-zinc-50 ">
+        <nav class="sm:bg-red-700 h-10 space-x-9 text-white-500">
+            <div class=" sm:ml-4 ">
+                <ul class=" sm:flex space-x-9 text-zinc-50  ">
                     <li class="m-1">Home</li>
                     <li class="m-1">About Us</li>
                     <li class="m-1">Contact</li>
@@ -24,35 +24,35 @@
         </nav>
 
         <!-- ----------------------------------------options for users to select -------------------- -->
-        <div class="flex bg-red-700  w-full  p-4 space-x-4 ">
-            <div class=" bg-blue-100 rounded-full p-2">
-                <label for="gender">Gender</label>
+        <div class="sm:flex bg-red-700  w-full  p-4 space-x-4  ">
+            <div class="  bg-blue-100 rounded-full p-2 w-15 sm:text-sm w-15 h-10 rounded-xl">
+                <label for="gender" class="sm:mb-7 text-sm">Gender</label>
 
-                <select name="Girl" id="gender" class="mr-8 border-radius: 10px; rounded-full">
+                <select name="Girl" id="gender" class="sm:mr-8 rounded-full sm:mb-5">
 
                     <option value="Girl" selected>Girl</option>
                     <option value="Boy">Boy</option>
 
                 </select>
             </div>
-            <div class=" bg-blue-100 rounded-full p-2">
-                <label for="gender">Room Type</label>
+            <div class="sm:bg-blue-100 rounded-full p-2 w-15">
+                <label for="gender" class=" sm:text-sm">Room Type</label>
 
                 <select name="Girl" id="gender" class="mr-8 border-radius: 10px; rounded-full">
 
-                    <option value="Girl" selected>1Bhk</option>
-                    <option value="Girl" selected>2Bhk</option>
+                    <option value="Girl" >1Bhk</option>
+                    <option value="Girl" >2Bhk</option>
                     <option value="Girl" selected>3Bhk</option>
-                    <option value="Girl" selected>4Bhk</option>
+                    <option value="Girl" >4Bhk</option>
 
                 </select>
             </div>
 
 
 
-            <div class=" bg-blue-100 rounded-full p-2">
+            <div class=" bg-blue-100 rounded-full p-2  w-15">
                 <label for="gender">Occupancy</label>
-                <select name="Girl" id="gender" class="mr-8 border-radius: 10px; rounded-full">
+                <select name="Girl" id="gender" class="mr-8  rounded-full">
 
                     <option value="Girl" selected>Professional</option>
                     <option value="Boy">Students</option>
@@ -64,7 +64,7 @@
             <div class=" bg-blue-100 rounded-full p-2">
                 <label for="gender">Budget</label>
 
-                <select name="Girl" id="gender" class="mr-8 border-radius: 10px; rounded-full">
+                <select name="Girl" id="gender" class="mr-8 rounded-full">
 
                     <option value="Girl" selected>3k-4k</option>
                     <option value="Boy">4k-5k</option>
@@ -82,7 +82,7 @@
             <div class=" bg-blue-100 rounded-full p-2">
                 <label for="gender">NearBy</label>
 
-                <select name="Girl" id="gender" class="mr-8 border-radius: 10px; rounded-full">
+                <select name="Girl" id="gender" class="mr-8 rounded-full">
 
                     <option value="Girl" selected>Baner</option>
                     <option value="Boy">Aundh</option>
@@ -94,7 +94,7 @@
             <div class=" bg-blue-100 rounded-full p-2">
                 <label for="gender">Verified PG</label>
 
-                <select name="Girl" id="gender" class="mr-8 border-radius: 10px; rounded-full">
+                <select name="Girl" id="gender" class="mr-8  rounded-full">
 
                     <option value="Girl" selected>No</option>
                     <option value="Girl" selected>Yes</option>
@@ -114,12 +114,13 @@
     <main>
 
         <!-------------------------------------- Searching flat------------------------------------- -->
-        <div class="mb-6 mt-32 ">
+        <div >
+            <div class="mb-6 mt-32 ">
             <h1 class="text-center text-2xl m-2 font-bold ">Find a home away from home</h1>
         </div>
 
         <div class="  flex bg-blue-100 rounded-full p-2 w-3/4 border-2 border-red-500 rounded-full mx-auto">
-            <div class="justify-end bg-red-700 w-40 text-center text-white rounded-full mx-8 p-2">
+            <div class="justify-end bg-red-700 w-40 text-center text-white rounded-full mx-2 p-2">
                 <button for="gender">Search<button>
             </div>
         </div>
@@ -128,6 +129,7 @@
         <div class="w-full h-48  bg-slate-200">
 
         </div>
+    </div>
 
         <!------------------------------------- Flat/pg Details-------------------------------------- -->
         <div class="m-1 flex border-red-500 border mb-6 shadow-black shadow-sm m-4">
@@ -296,7 +298,7 @@
 
 
         <!-- ----------------------contact us form ------------------------------------------------ -->
-        <div class="w-full w-96 max-w-full mx-auto m-8">
+        <div class=" w-96 max-w-full mx-auto m-8">
             <div class="p-6 border border-red-300 sm:rounded-md">
                 <form method="POST" action="#">
                     <label class=" mb-6">
@@ -343,8 +345,7 @@
     </main>
 
 
-
-
+<!-- ---------------------------------------footer----------------------- -->
     <footer class=" bg-red-700  text-white text-center p-4">
         <h3 class="text-center">GrihaPravesh.olaorg.com</h3>
 
